feat: add ColumnDescription, TableDescription, QueryConsole components with view models; refactor DbStructureTree and related view models, add service for caching tables

--- a/PR2_FinalProject/View/Components/DbStructureTree.axaml
+++ b/PR2_FinalProject/View/Components/DbStructureTree.axaml
@@ -6,54 +6,49 @@
     x:Class="PR2_FinalProject.View.Components.DbStructureTree"
     x:DataType="viewModel:DbStructureTreeViewModel"
 >
-    <Border Padding="10">
-        <Grid>
-            <TextBlock Text="Empty... "
-                       VerticalAlignment="Center"
-                       FontSize="14">
-                <TextBlock.IsVisible>
-                    <Binding Path="NoSchemas" />
-                </TextBlock.IsVisible>
-            </TextBlock>
-            
-            <TreeView ItemsSource="{Binding Schemas}" 
-                      IsVisible="{Binding HasSchemas}"
-                      >
-                <TreeView.DataTemplates>
-                    <TreeDataTemplate DataType="db:SchemaViewModel" 
-                                      ItemsSource="{Binding Tables}">
-                        <TreeViewItem>
-                            <TextBlock Text="{Binding DisplayName}"
-                                       FontWeight="Bold" />
-                        </TreeViewItem>
-                    </TreeDataTemplate>
-                    <TreeDataTemplate DataType="db:TableViewModel" 
-                                      ItemsSource="{Binding Columns}">
-                        <TreeViewItem>
-                            <TextBlock Text="{Binding DisplayName}" />
-                        </TreeViewItem>
-                    </TreeDataTemplate>
-                        <DataTemplate DataType="db:ColumnViewModel">
-                            <TreeViewItem>
-                                <TextBlock Text="{Binding DisplayName}" />
-                            </TreeViewItem>
-                    </DataTemplate>
-                </TreeView.DataTemplates>
-            </TreeView>
+    <ScrollViewer>
+        <Border Padding="10" >
+            <Grid>
+                <TextBlock Text="Empty... "
+                           VerticalAlignment="Center"
+                           FontSize="14">
+                    <TextBlock.IsVisible>
+                        <Binding Path="NoSchemas" />
+                    </TextBlock.IsVisible>
+                </TextBlock>
 
-            <!-- <TreeView ItemsSource="{Binding Schemas}" -->
-            <!--           IsVisible="{Binding HasSchemas}"> -->
-            <!--     <TreeView.DataTemplates> -->
-            <!--         <TreeDataTemplate DataType="db:SchemaViewModel"  -->
-            <!--                           ItemsSource="{Binding Tables}" -->
-            <!--                           > -->
-            <!--             <TextBlock Text="{Binding DisplayName}" /> -->
-            <!--         </TreeDataTemplate> -->
-            <!--         <TreeDataTemplate DataType="db:TableViewModel" ItemsSource="{Binding Columns}"> -->
-            <!--             <TextBlock Text="{Binding Name}" /> -->
-            <!--         </TreeDataTemplate> -->
-            <!--     </TreeView.DataTemplates> -->
-            <!-- </TreeView> -->
-        </Grid>
-    </Border>
+                <TreeView ItemsSource="{Binding Schemas}"
+                          IsVisible="{Binding HasSchemas}"
+                          SelectionChanged="OnTreeItemSelected">
+                    <TreeView.DataTemplates>
+                        <TreeDataTemplate DataType="db:SchemaViewModel"
+                                          ItemsSource="{Binding Tables}">
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </TreeDataTemplate>
+                        <TreeDataTemplate DataType="db:DbTreeTableViewModel"
+                                          ItemsSource="{Binding Columns}">
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </TreeDataTemplate>
+                        <DataTemplate DataType="db:DbTreeColumnViewModel">
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </DataTemplate>
+                    </TreeView.DataTemplates>
+                </TreeView>
+
+                <!-- <TreeView ItemsSource="{Binding Schemas}" -->
+                <!--           IsVisible="{Binding HasSchemas}"> -->
+                <!--     <TreeView.DataTemplates> -->
+                <!--         <TreeDataTemplate DataType="db:SchemaViewModel"  -->
+                <!--                           ItemsSource="{Binding Tables}" -->
+                <!--                           > -->
+                <!--             <TextBlock Text="{Binding DisplayName}" /> -->
+                <!--         </TreeDataTemplate> -->
+                <!--         <TreeDataTemplate DataType="db:TableViewModel" ItemsSource="{Binding Columns}"> -->
+                <!--             <TextBlock Text="{Binding Name}" /> -->
+                <!--         </TreeDataTemplate> -->
+                <!--     </TreeView.DataTemplates> -->
+                <!-- </TreeView> -->
+            </Grid>
+        </Border>
+    </ScrollViewer>
 </UserControl>
