--- a/PR2_FinalProject/View/Windows/ConnectionSettingsWindow.axaml
+++ b/PR2_FinalProject/View/Windows/ConnectionSettingsWindow.axaml
@@ -18,9 +18,14 @@
                      Grid.Row="1"
                      Watermark="Host=localhost;Port=5432;Database=db;User=postgres;Password=qwerty"
                      Text="{Binding ConnectionString}"/>
-            <Button Grid.Row="3" Command="{Binding ConnectAsync}">
-                Confirm
-            </Button>
+            <Grid Grid.Row="3" ColumnDefinitions="Auto, Auto">
+                <Button Grid.Column="0" Command="{Binding ConnectAsync}">
+                    Confirm
+                </Button>
+                <Button Margin="10 0 0 0" Background="IndianRed" Grid.Column="1" Click="CloseDialog">
+                    Cancel
+                </Button>
+            </Grid>
             <TextBlock Name="ErrorText" Foreground="Red" Grid.Row="4"/>
         </Grid>
     </Border>
