--- a/PR2_FinalProject/View/App.axaml
+++ b/PR2_FinalProject/View/App.axaml
@@ -1,10 +1,16 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="PR2_FinalProject.View.App"
-             RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-
+             RequestedThemeVariant="Default"
+             xmlns:conv="clr-namespace:PR2_FinalProject.Misc.Converters"
+             >
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
     </Application.Styles>
+        <Application.Resources>
+            <conv:ColumnGridConverter x:Key="ColumnGridConverter"/>
+            <conv:NullTextConverter x:Key="NullTextConverter"/>
+            <conv:NullTextBrushConverter x:Key="NullTextBrushConverter"/>
+        </Application.Resources>
 </Application>
